--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h4>Front-End Developer</h4>
                 </div><div class="avatar two reveal">
                     <img src="./img/jubretCrop.png" alt="Nkechi">
-                    <h3>Jubret Nigeria</h3>
+                    <h3>Jubret</h3>
                     <h4>Front-End Developer</h4>
                 </div>
             </div>
